--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,13 +1,82 @@
----
-title: Welcome to Middleman
----
 
-<div class="welcome">
-  <div class="logo">
-    <%= image_tag "middleman-logo.svg" %>
-  </div>
-  <h1>Middleman is Running</h1>
-  <p class="doc">
-    <%= link_to "Read Documentation Online", "https://middlemanapp.com", target: "_blank" %>
-  </p><!-- .doc -->
-</div><!-- .welcome -->
+<!-- Main -->
+<div id="main">
+
+  <!-- Introduction -->
+    <section id="intro" class="main">
+      <div class="spotlight">
+        <div class="content">
+          <header class="major">
+            <h2>Ipsum sed adipiscing</h2>
+          </header>
+          <p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
+          adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
+          Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+          <ul class="actions">
+            <li><a href="generic.html" class="button">Learn More</a></li>
+          </ul>
+        </div>
+        <span class="image"><img src="images/pic01.jpg" alt="" /></span>
+      </div>
+    </section>
+
+  <!-- First Section -->
+    <section id="first" class="main special" style="padding: 0;">
+<!--       <iframe width="100%" height="520" frameborder="0" src="https://mapc.carto.com/u/mapc-admin/builder/5e06ca82-9c79-11e6-bf23-0e3ebc282e83/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+ -->
+      <div id="map" style="height: 520px; width:100%;"></div>    
+    </section>
+
+  <!-- Second Section -->
+    <section id="second" class="main special">
+      <header class="major">
+        <h2>Ipsum consequat</h2>
+        <p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
+        posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+      </header>
+      <ul class="statistics">
+        <li class="style1">
+          <span class="icon fa-code-fork"></span>
+          <strong>5,120</strong> Etiam
+        </li>
+        <li class="style2">
+          <span class="icon fa-folder-open-o"></span>
+          <strong>8,192</strong> Magna
+        </li>
+        <li class="style3">
+          <span class="icon fa-signal"></span>
+          <strong>2,048</strong> Tempus
+        </li>
+        <li class="style4">
+          <span class="icon fa-laptop"></span>
+          <strong>4,096</strong> Aliquam
+        </li>
+        <li class="style5">
+          <span class="icon fa-diamond"></span>
+          <strong>1,024</strong> Nullam
+        </li>
+      </ul>
+      <p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
+      <footer class="major">
+        <ul class="actions">
+          <li><a href="generic.html" class="button">Learn More</a></li>
+        </ul>
+      </footer>
+    </section>
+
+  <!-- Get Started -->
+    <section id="cta" class="main special">
+      <header class="major">
+        <h2>Congue imperdiet</h2>
+        <p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
+        posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+      </header>
+      <footer class="major">
+        <ul class="actions">
+          <li><a href="generic.html" class="button special">Get Started</a></li>
+          <li><a href="generic.html" class="button">Learn More</a></li>
+        </ul>
+      </footer>
+    </section>
+
+</div>
