--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,20 +1,101 @@
-<!doctype html>
+<!DOCTYPE HTML>
+<!--
+  Stellar by HTML5 UP
+  html5up.net | @ajlkn
+  Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
   <head>
-    <meta content="IE=edge" http-equiv="X-UA-Compatible">
-    <meta charset="utf-8">
-    <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
+    <title>Wakefield Cultural Survey</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/3.15/themes/css/cartodb.css" />
 
-    <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "Middleman" %></title>
-
-    <link href='//fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
-
-    <%= stylesheet_link_tag :site %>
-    <%= javascript_include_tag :all %>
+<!--     <%= stylesheet_link_tag :site %>
+    <%= javascript_include_tag :all %> -->
+    <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+    <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
   </head>
+  <body>
 
-  <body class="<%= page_classes %>">
-    <%= yield %>
+    <!-- Wrapper -->
+      <div id="wrapper">
+
+        <!-- Header -->
+          <header id="header" class="alt">
+            <span class="logo"><img src="images/logo.svg" alt="" /></span>
+            <h1>Wakefield Cultural Survey</h1>
+            <p>Just another free, fully responsive site template<br />
+            built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p>
+          </header>
+
+        <!-- Nav -->
+          <nav id="nav">
+            <ul>
+              <li><a href="#intro" class="active">Introduction</a></li>
+              <li><a href="#first">First Section</a></li>
+              <li><a href="#second">Second Section</a></li>
+              <li><a href="#cta">Get Started</a></li>
+            </ul>
+          </nav>
+
+          <%= yield %>
+
+        <!-- Footer -->
+          <footer id="footer">
+            <section>
+              <h2>Aliquam sed mauris</h2>
+              <p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
+              <ul class="actions">
+                <li><a href="generic.html" class="button">Learn More</a></li>
+              </ul>
+            </section>
+            <section>
+              <h2>Etiam feugiat</h2>
+              <dl class="alt">
+                <dt>Address</dt>
+                <dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
+                <dt>Phone</dt>
+                <dd>(000) 000-0000 x 0000</dd>
+                <dt>Email</dt>
+                <dd><a href="#">information@untitled.tld</a></dd>
+              </dl>
+              <ul class="icons">
+                <li><a href="#" class="icon fa-twitter alt"><span class="label">Twitter</span></a></li>
+                <li><a href="#" class="icon fa-facebook alt"><span class="label">Facebook</span></a></li>
+                <li><a href="#" class="icon fa-instagram alt"><span class="label">Instagram</span></a></li>
+                <li><a href="#" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
+                <li><a href="#" class="icon fa-dribbble alt"><span class="label">Dribbble</span></a></li>
+              </ul>
+            </section>
+            <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+          </footer>
+
+      </div>
+
+    <!-- Scripts -->
+      <script src="assets/js/jquery.min.js"></script>
+      <script src="assets/js/jquery.scrollex.min.js"></script>
+      <script src="assets/js/jquery.scrolly.min.js"></script>
+      <script src="assets/js/skel.min.js"></script>
+      <script src="assets/js/util.js"></script>
+      <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+      <script src="assets/js/main.js"></script>
+      <script src="http://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.js"></script>
+      <script>
+      // get the viz.json url from the CARTO Editor
+      // - click on visualize
+      // - create new visualization
+      // - make visualization public
+      // - click on publish
+      // - go to API tab
+
+      window.onload = function() {
+        cartodb.createVis('map', 'http://mapc-admin.carto.com/u/mapc-admin/api/v2/viz/5e06ca82-9c79-11e6-bf23-0e3ebc282e83/viz.json');
+      }
+      </script>
+
   </body>
 </html>
