Using dynamic protocol

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -93,7 +93,7 @@
       // - go to API tab
 
       window.onload = function() {
-        cartodb.createVis('map', 'http://mapc-admin.carto.com/u/mapc-admin/api/v2/viz/5e06ca82-9c79-11e6-bf23-0e3ebc282e83/viz.json');
+        cartodb.createVis('map', '//mapc-admin.carto.com/u/mapc-admin/api/v2/viz/5e06ca82-9c79-11e6-bf23-0e3ebc282e83/viz.json');
       }
       </script>
 
