Taking away cartojs and using embed

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
     <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="stylesheet" href="assets/css/cartodb.css" />
+    <link rel="stylesheet" href="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15/themes/css/cartodb.css" />
 
 <!--     <%= stylesheet_link_tag :site %>
     <%= javascript_include_tag :all %> -->
@@ -83,7 +83,7 @@
       <script src="assets/js/util.js"></script>
       <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
       <script src="assets/js/main.js"></script>
-      <script src="assets/js/cartodb.js"></script>
+      <script src="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15/cartodb.js"></script>
       <script>
       // get the viz.json url from the CARTO Editor
       // - click on visualize
@@ -93,7 +93,7 @@
       // - go to API tab
 
       window.onload = function() {
-        cartodb.createVis('map', '//mapc-admin.carto.com/u/mapc-admin/api/v2/viz/5e06ca82-9c79-11e6-bf23-0e3ebc282e83/viz.json');
+        cartodb.createVis('map', 'https://mapc-admin.carto.com/u/mapc-admin/api/v1/viz/5e06ca82-9c79-11e6-bf23-0e3ebc282e83/viz.json', { https: true });
       }
       </script>
 
