--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -24,7 +24,8 @@
     <section id="first" class="main special" style="padding: 0;">
 <!--       <iframe width="100%" height="520" frameborder="0" src="https://mapc.carto.com/u/mapc-admin/builder/5e06ca82-9c79-11e6-bf23-0e3ebc282e83/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
  -->
-      <div id="map" style="height: 520px; width:100%;"></div>    
+      <!-- <div id="map" style="height: 520px; width:100%;"></div>     -->
+      <iframe width="100%" height="700" frameborder="0" src="https://mapc.carto.com/u/mapc-admin/builder/5e06ca82-9c79-11e6-bf23-0e3ebc282e83/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
     </section>
 
   <!-- Second Section -->
