--- a/source/assets/css/main.css
+++ b/source/assets/css/main.css
@@ -1624,10 +1624,10 @@
 
 	body {
 		background-color: #935d8c;
-		background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
-		background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
-		background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
-		background-image: url("images/overlay.png"), linear-gradient(45deg, #e37682 15%, #5f4d93 85%);
+		background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, rgb(1,29,108) 15%, rgb(76,175,80) 85%);
+		background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, rgb(1,29,108) 15%, rgb(76,175,80) 85%);
+		background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, rgb(1,29,108) 15%, rgb(76,175,80) 85%);
+		background-image: url("images/overlay.png"), linear-gradient(45deg, rgb(1,29,108) 15%, rgb(76,175,80) 85%);
 	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
@@ -3562,10 +3562,10 @@
 
 		#main header.major h2:after {
 			background-color: #dddddd;
-			background-image: -moz-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
-			background-image: -webkit-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
-			background-image: -ms-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
-			background-image: linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
+			background-image: -moz-linear-gradient(45deg, rgb(1,29,108) 15%, rgb(76,175,80) 85%);
+			background-image: -webkit-linear-gradient(45deg, rgb(1,29,108) 15%, rgb(76,175,80) 85%);
+			background-image: -ms-linear-gradient(45deg, rgb(1,29,108) 15%, rgb(76,175,80) 85%);
+			background-image: linear-gradient(45deg, rgb(1,29,108) 15%, rgb(76,175,80) 85%);
 		}
 
 		#main table tbody tr {
