--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -25,10 +25,9 @@
 
         <!-- Header -->
           <header id="header" class="alt">
-            <span class="logo"><img src="images/logo.svg" alt="" /></span>
+            <span class="logo"><img src="images/WakefieldMA-seal.png" alt="" /></span>
             <h1>Wakefield Cultural Survey</h1>
-            <p>Just another free, fully responsive site template<br />
-            built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p>
+            <p>An economic development plan for downtown Wakefield focused on the arts.</p>
           </header>
 
         <!-- Nav -->
