--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Wakefield Cultural Survey</title>
+    <title>Albion Arts Corridor Economic Development Strategy</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -26,17 +26,17 @@
         <!-- Header -->
           <header id="header" class="alt">
             <span class="logo"><img src="images/WakefieldMA-seal.png" alt="" /></span>
-            <h1>Wakefield Cultural Survey</h1>
-            <p>An economic development plan for downtown Wakefield focused on the arts.</p>
+            <h1>Albion Arts Corridor Strategy</h1>
+            <p> Developing a vision for the future of the cultural community in Downtown Wakefield.</p>
           </header>
 
         <!-- Nav -->
           <nav id="nav">
             <ul>
-              <li><a href="#intro" class="active">Introduction</a></li>
-              <li><a href="#first">First Section</a></li>
-              <li><a href="#second">Second Section</a></li>
-              <li><a href="#cta">Get Started</a></li>
+              <li><a href="#intro" class="active">Contribute</a></li>
+              <li><a href="#first">See Results</a></li>
+              <li><a href="#second">Meet With Us</a></li>
+              <li><a href="#cta">Engage Further</a></li>
             </ul>
           </nav>
 
@@ -45,31 +45,22 @@
         <!-- Footer -->
           <footer id="footer">
             <section>
-              <h2>Aliquam sed mauris</h2>
-              <p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
+              <h2>About MAPC</h2>
+              <p>The Metropolitan Area Planning Council (MAPC) is the regional planning agency serving the people who live and work in the 101 cities and towns of Metropolitan Boston. Our mission is to promote smart growth and regional collaboration. Our regional plan, MetroFuture, guides our work as we engage the public in responsible stewardship of our region’s future.</p>
               <ul class="actions">
-                <li><a href="generic.html" class="button">Learn More</a></li>
+                <li><a href="http://mapc.org" target="_blank" class="button">Learn More</a></li>
               </ul>
             </section>
             <section>
-              <h2>Etiam feugiat</h2>
+              <h2>Contact</h2>
               <dl class="alt">
                 <dt>Address</dt>
-                <dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-                <dt>Phone</dt>
-                <dd>(000) 000-0000 x 0000</dd>
+                <dd>60 Temple Place &bull; Boston, MA 02111 &bull; USA</dd>
                 <dt>Email</dt>
-                <dd><a href="#">information@untitled.tld</a></dd>
+                <dd><a href="#">achisholm@mapc.org</a></dd>
               </dl>
-              <ul class="icons">
-                <li><a href="#" class="icon fa-twitter alt"><span class="label">Twitter</span></a></li>
-                <li><a href="#" class="icon fa-facebook alt"><span class="label">Facebook</span></a></li>
-                <li><a href="#" class="icon fa-instagram alt"><span class="label">Instagram</span></a></li>
-                <li><a href="#" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
-                <li><a href="#" class="icon fa-dribbble alt"><span class="label">Dribbble</span></a></li>
-              </ul>
             </section>
-            <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+            <p class="copyright">&copy; MAPC. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
           </footer>
 
       </div>
