--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,77 +7,67 @@
       <div class="spotlight">
         <div class="content">
           <header class="major">
-            <h2>Ipsum sed adipiscing</h2>
+            <h2>Contribute Your Input</h2>
           </header>
-          <p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-          adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-          Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+          <p>MAPC staff are working with the Town of Wakefield and the Albion Cultural Exchange Committee to put together a cultural economic development strategy for Downtown Wakefield focused on the Albion Arts Corridor. </p>
+
+          <p>Our goal is to develop a vision for the future of the cultural community in Downtown Wakefield and to create a community supported action plan with strategies to achieve that vision.</p>
+
+          <p>The action plan will be informed by a survey we are conducting. We are asking about the cultural assets in Downtown Wakefield and the community's vision for the Albion Arts Corridor. Click the button below to take the survey</p>
           <ul class="actions">
-            <li><a href="generic.html" class="button">Learn More</a></li>
+            <li><a href="https://app.localdata.com/mobile/#wakefield-cultural-assets-1" class="button" target="_blank">TAKE THE SURVEY</a></li>
           </ul>
         </div>
-        <span class="image"><img src="images/pic01.jpg" alt="" /></span>
+        <span class="image"><img src="images/aceaufgust.jpg" alt="" /></span>
       </div>
     </section>
 
   <!-- First Section -->
-    <section id="first" class="main special" style="padding: 0;">
+    <section id="first" class="main special" style="padding: 0; padding-top:inherit;">
+      <div class="spotlight">
+        <div class="content">
+          <header class="major">
+            <h2>Mapped Results</h2>
+          </header>
+          <p>Below is a map of surveyed cultural assets. The map updates hourly. Something missing? <a href="https://app.localdata.com/mobile/#wakefield-cultural-assets-1" target="_blank">Contribute your input</a>.</p>
+        </div>
+      </div>
 <!--       <iframe width="100%" height="520" frameborder="0" src="https://mapc.carto.com/u/mapc-admin/builder/5e06ca82-9c79-11e6-bf23-0e3ebc282e83/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
  -->
       <!-- <div id="map" style="height: 520px; width:100%;"></div>     -->
-      <iframe width="100%" height="700" frameborder="0" src="https://mapc.carto.com/u/mapc-admin/builder/5e06ca82-9c79-11e6-bf23-0e3ebc282e83/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+      <iframe width="100%" style="height: 90vh" frameborder="0" src="https://mapc.carto.com/u/mapc-admin/builder/5e06ca82-9c79-11e6-bf23-0e3ebc282e83/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
     </section>
 
   <!-- Second Section -->
-    <section id="second" class="main special">
-      <header class="major">
-        <h2>Ipsum consequat</h2>
-        <p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-        posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
-      </header>
-      <ul class="statistics">
-        <li class="style1">
-          <span class="icon fa-code-fork"></span>
-          <strong>5,120</strong> Etiam
-        </li>
-        <li class="style2">
-          <span class="icon fa-folder-open-o"></span>
-          <strong>8,192</strong> Magna
-        </li>
-        <li class="style3">
-          <span class="icon fa-signal"></span>
-          <strong>2,048</strong> Tempus
-        </li>
-        <li class="style4">
-          <span class="icon fa-laptop"></span>
-          <strong>4,096</strong> Aliquam
-        </li>
-        <li class="style5">
-          <span class="icon fa-diamond"></span>
-          <strong>1,024</strong> Nullam
-        </li>
-      </ul>
-      <p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
-      <footer class="major">
-        <ul class="actions">
-          <li><a href="generic.html" class="button">Learn More</a></li>
-        </ul>
-      </footer>
+    <section id="second" class="main">
+      <div class="spotlight">
+        <div class="content">
+          <header class="major">
+            <h2>November 17th Kick Off Meeting</h2>
+          </header>
+          <p>Join us for the Kick-Off meeting for the Albion Arts Corridor plan on Thursday, November 17th at 7 PM at the Galvin Junior High School Cafeteria. Learn more about the project, participate in interactive activities, and share your vision for the downtown.</p>
+          <p>There will be a brief presentation introducing the project at 7 PM followed by a series of interactive activities through which we will be gathering feedback from participants.</p>
+          <p>Light refreshments will be served.</p>
+          <ul class="actions">
+            <li><a href="/assets/AlbionArtsCorridorFlyer_FINAL.pdf" class="button" target="_blank">SEE THE FLYER</a></li>
+          </ul>
+        </div>
+        <span class="image"><img src="images/2015-08-22_17.51.24.jpg" alt="" /></span>
+      </div>
     </section>
 
   <!-- Get Started -->
-    <section id="cta" class="main special">
-      <header class="major">
-        <h2>Congue imperdiet</h2>
-        <p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-        posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
-      </header>
-      <footer class="major">
-        <ul class="actions">
-          <li><a href="generic.html" class="button special">Get Started</a></li>
-          <li><a href="generic.html" class="button">Learn More</a></li>
-        </ul>
-      </footer>
+    <section id="cta" class="main">
+      <div class="spotlight">
+        <div class="content">
+          <header class="major">
+            <h2>More Opportunities to Engage</h2>
+            <p>Look for us at the Wakefield Holiday Stroll for more opportunties to engage in the Albion Arts Corridor Plan.</p>
+
+            <p>For more information on the Albion Arts Corridor Economic Development Plan please contact Amanda Chisholm at <a href="mailto:achisholm@mapc.org">achisholm@mapc.org</a></p>
+          </header>
+        </div>
+      </div>
     </section>
 
 </div>
