--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -29,7 +29,7 @@
           <header class="major">
             <h2>Mapped Results</h2>
           </header>
-          <p>Below is a map of surveyed cultural assets. The map updates hourly. Something missing? <a href="https://app.localdata.com/mobile/#wakefield-cultural-assets-1" target="_blank">Contribute your input</a>.</p>
+          <p>Below is a map of surveyed cultural assets. The map updates hourly. Something missing? <a href="https://app.localdata.com/mobile/#wakefield-cultural-assets-1" target="_blank">Map your cultural asset</a>.</p>
         </div>
       </div>
 <!--       <iframe width="100%" height="520" frameborder="0" src="https://mapc.carto.com/u/mapc-admin/builder/5e06ca82-9c79-11e6-bf23-0e3ebc282e83/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
