Adding map title

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -32,10 +32,11 @@
           <p>Below is a map of surveyed cultural assets. The map updates hourly. Something missing? <a href="https://app.localdata.com/mobile/#wakefield-cultural-assets-1" target="_blank">Map your cultural asset</a>.</p>
         </div>
       </div>
+      <h2>Albion Cultural Assets</h2>
 <!--       <iframe width="100%" height="520" frameborder="0" src="https://mapc.carto.com/u/mapc-admin/builder/5e06ca82-9c79-11e6-bf23-0e3ebc282e83/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
  -->
       <!-- <div id="dashboard" style="height: 520px; width:100%;"></div>     -->
-      <iframe width="100%" style="height: 90vh" frameborder="0" src="https://mapc.carto.com/u/mapc-admin/builder/5e06ca82-9c79-11e6-bf23-0e3ebc282e83/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+      <iframe width="99%" style="height: 90vh" frameborder="0" src="https://mapc.carto.com/u/mapc-admin/builder/5e06ca82-9c79-11e6-bf23-0e3ebc282e83/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
     </section>
 
   <!-- Second Section -->
