--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -15,7 +15,7 @@
 
           <p>The action plan will be informed by a survey we are conducting. We are asking about the cultural assets in Downtown Wakefield and the community's vision for the Albion Arts Corridor. Click the button below to take the survey</p>
           <ul class="actions">
-            <li><a href="https://app.localdata.com/mobile/#wakefield-cultural-assets-1" class="button" target="_blank">TAKE THE SURVEY</a></li>
+            <li><a href="https://mapc.github.io/wakefield-cultural-assets/" class="button" target="_blank">TAKE THE SURVEY</a></li>
           </ul>
         </div>
         <span class="image"><img src="images/aceaufgust.jpg" alt="" /></span>
