--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -14,6 +14,8 @@
           <p>Our goal is to develop a vision for the future of the cultural community in Downtown Wakefield and to create a community supported action plan with strategies to achieve that vision.</p>
 
           <p>The action plan will be informed by a survey we are conducting. We are asking about the cultural assets in Downtown Wakefield and the community's vision for the Albion Arts Corridor. Click the button below to take the survey and be entered into a raffle to win a gift card from Kicasso or Create Artisan Studio on Albion Street.</p>
+          
+          <p>Note: This webpage, the survey, and mapping tool work best in a browser other than Internet Explorer.</p>
           <ul class="actions">
             <li><a href="https://mapc.github.io/wakefield-cultural-assets/" class="button" target="_blank">TAKE THE SURVEY</a></li>
           </ul>
