--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -17,7 +17,7 @@
           
           <p>Note: This webpage, the survey, and mapping tool work best in a browser other than Internet Explorer.</p>
           <ul class="actions">
-            <li><a href="https://mapc.github.io/wakefield-cultural-assets/" class="button" target="_blank">TAKE THE SURVEY</a></li>
+            <li><a href="https://www.surveymonkey.com/r/DVQQWXJ" class="button" target="_blank">TAKE THE SURVEY</a></li>
           </ul>
         </div>
         <span class="image"><img src="images/aceaufgust.jpg" alt="" /></span>
