--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -48,7 +48,7 @@
           <header class="major">
             <h2>November 17th Kick Off Meeting</h2>
           </header>
-          <p>Join us for the Kick-Off meeting for the Albion Arts Corridor plan on Thursday, November 17th at 7 PM at the Galvin Junior High School Cafeteria. Learn more about the project, participate in interactive activities, and share your vision for the downtown.</p>
+          <p>Join us for the Kick-Off meeting for the Albion Arts Corridor plan on Thursday, November 17th at 7 PM at the Galvin Middle School Cafeteria. Learn more about the project, participate in interactive activities, and share your vision for the downtown.</p>
           <p>There will be a brief presentation introducing the project at 7 PM followed by a series of interactive activities through which we will be gathering feedback from participants.</p>
           <p>Light refreshments will be served.</p>
           <ul class="actions">
