--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -13,7 +13,7 @@
 
           <p>Our goal is to develop a vision for the future of the cultural community in Downtown Wakefield and to create a community supported action plan with strategies to achieve that vision.</p>
 
-          <p>The action plan will be informed by a survey we are conducting. We are asking about the cultural assets in Downtown Wakefield and the community's vision for the Albion Arts Corridor. Click the button below to take the survey and be entered into a raffle to win a gift card from Kicasso or Create Artisan Studio on Albion Street.</p>
+          <p>The action plan will be informed by a survey we are conducting. We are asking about the cultural assets in Downtown Wakefield and the community's vision for the Albion Arts Corridor. Click the button below to take the survey and be entered into a raffle to win a gift card from KidCasso or Create Artisan Studio on Albion Street.</p>
           
           <p>Note: This webpage, the survey, and mapping tool work best in a browser other than Internet Explorer.</p>
           <ul class="actions">
@@ -46,10 +46,10 @@
       <div class="spotlight">
         <div class="content">
           <header class="major">
-            <h2>November 17th Kick Off Meeting</h2>
+            <h2>Wakefield Holiday Stroll</h2>
           </header>
-          <p>Join us for the Kick-Off meeting for the Albion Arts Corridor plan on Thursday, November 17th at 7 PM at the Galvin Middle School Cafeteria. Learn more about the project, participate in interactive activities, and share your vision for the downtown.</p>
-          <p>There will be a brief presentation introducing the project at 7 PM followed by a series of interactive activities through which we will be gathering feedback from participants.</p>
+          <p>Join us at the Albion Cultural Exchange at 9 Albion Street in Downtown Wakefield on December 3rd from 3-6 PM. Learn more about the Albion Arts Corridor project and give us your feedback.</p>
+          <p>There will be local art on display, kids crafts, an opportunity to participate in our survey and of course, hot cocoa.</p>
           <p>Light refreshments will be served.</p>
           <ul class="actions">
             <li><a href="/assets/AlbionArtsCorridorFlyer_FINAL.pdf" class="button" target="_blank">SEE THE FLYER</a></li>
