--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -48,8 +48,7 @@
           <header class="major">
             <h2>Wakefield Holiday Stroll</h2>
           </header>
-          <p>Join us at the Albion Cultural Exchange at 9 Albion Street in Downtown Wakefield on December 3rd from 3-7 PM. Learn more about the Albion Arts Corridor project and give us your feedback.</p>
-          <p>There will be local art on display, kids crafts, an opportunity to participate in our survey and of course, hot cocoa.</p>
+          <p>We had a great time and got lots of feedback on arts and culture in Wakefield at the Holiday Stroll on December 3rd.</p>
           <ul class="actions">
           </ul>
         </div>
