--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,17 +7,14 @@
       <div class="spotlight">
         <div class="content">
           <header class="major">
-            <h2>Contribute Your Input</h2>
+            <h2>Thank You For Your Input</h2>
           </header>
           <p>MAPC staff are working with the Town of Wakefield and the Albion Cultural Exchange Committee to put together a cultural economic development strategy for Downtown Wakefield focused on the Albion Arts Corridor. </p>
 
           <p>Our goal is to develop a vision for the future of the cultural community in Downtown Wakefield and to create a community supported action plan with strategies to achieve that vision.</p>
 
-          <p>The action plan will be informed by a survey we are conducting. We are asking about the cultural assets in Downtown Wakefield and the community's vision for the Albion Arts Corridor. Click the button below to take the survey and be entered into a raffle to win a gift card from KidCasso or Create Artisan Studio on Albion Street.</p>
+          <p>The action plan will be informed by a survey we conducted that received over 100 responses! Thank you to survey participants and others we have spoken with for helping us to inventory the cultural assets in Downtown Wakefield and to understand the community's vision for the Albion Arts Corridor.</p>
           
-          <p>Note: This webpage, the survey, and mapping tool work best in a browser other than Internet Explorer.</p>
-          <ul class="actions">
-            <li><a href="https://www.surveymonkey.com/r/DVQQWXJ" class="button" target="_blank">TAKE THE SURVEY</a></li>
           </ul>
         </div>
         <span class="image"><img src="images/aceaufgust.jpg" alt="" /></span>
