--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -43,9 +43,9 @@
       <div class="spotlight">
         <div class="content">
           <header class="major">
-            <h2>Wakefield Holiday Stroll</h2>
+            <h2>Albion Arts Corridor: Presentation of Final Report</h2>
           </header>
-          <p>We had a great time and got lots of feedback on arts and culture in Wakefield at the Holiday Stroll on December 3rd.</p>
+          <p>Stay tuned for a spring meeting date where we will share what we heard from all of you as well as recommendations for moving forward to advance the Albion Arts Corridor.</p>
           <ul class="actions">
           </ul>
         </div>
@@ -59,7 +59,6 @@
         <div class="content">
           <header class="major">
             <h2>More Opportunities to Engage</h2>
-            <p>Look for us at the Wakefield Holiday Stroll for more opportunties to engage in the Albion Arts Corridor Plan.</p>
 
             <p>For more information on the Albion Arts Corridor Economic Development Plan please contact Amanda Chisholm at <a href="mailto:achisholm@mapc.org">achisholm@mapc.org</a></p>
           </header>
