--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -45,7 +45,7 @@
           <header class="major">
             <h2>Albion Arts Corridor: Presentation of Final Report</h2>
           </header>
-          <p>Stay tuned for a spring meeting date where we will share what we heard from all of you as well as recommendations for moving forward to advance the Albion Arts Corridor.</p>
+          <p>Join us for our final meeting on Thursday, June 22nd from 6-8 PM at the Beebe Library Lecture Hall. Plaza Jazz will be going on outside and there will be arts activities for kids as well as free food!</p>
           <ul class="actions">
           </ul>
         </div>
