--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,69 +1,60 @@
-
 <!-- Main -->
 <div id="main">
-
   <!-- Introduction -->
-    <section id="intro" class="main">
-      <div class="spotlight">
-        <div class="content">
-          <header class="major">
-            <h2>Thank You For Your Input</h2>
-          </header>
-          <p>MAPC staff are working with the Town of Wakefield and the Albion Cultural Exchange Committee to put together a cultural economic development strategy for Downtown Wakefield focused on the Albion Arts Corridor. </p>
-
-          <p>Our goal is to develop a vision for the future of the cultural community in Downtown Wakefield and to create a community supported action plan with strategies to achieve that vision.</p>
-
-          <p>The action plan will be informed by a survey we conducted that received over 100 responses! Thank you to survey participants and others we have spoken with for helping us to inventory the cultural assets in Downtown Wakefield and to understand the community's vision for the Albion Arts Corridor.</p>
-          
-          </ul>
-        </div>
-        <span class="image"><img src="images/aceaufgust.jpg" alt="" /></span>
+  <section id="intro" class="main">
+    <div class="spotlight">
+      <div class="content">
+        <header class="major">
+          <h2>Thank You For Your Input</h2>
+        </header>
+        <p>MAPC staff are working with the Town of Wakefield and the Albion Cultural Exchange Committee to put together a cultural economic development strategy for Downtown Wakefield focused on the Albion Arts Corridor. </p>
+        <p>Our goal is to develop a vision for the future of the cultural community in Downtown Wakefield and to create a community supported action plan with strategies to achieve that vision.</p>
+        <p>The action plan will be informed by a survey we conducted that received over 100 responses! Thank you to survey participants and others we have spoken with for helping us to inventory the cultural assets in Downtown Wakefield and to understand the community's vision for the Albion Arts Corridor.</p>
+        </ul>
       </div>
-    </section>
-
+      <span class="image"><img src="images/aceaufgust.jpg" alt="" /></span>
+    </div>
+  </section>
   <!-- First Section -->
-    <section id="first" class="main special" style="padding: 0; padding-top:inherit;">
-      <div class="spotlight">
-        <div class="content">
-          <header class="major">
-            <h2>Mapped Results</h2>
-          </header>
-          <p>Below is a map of surveyed cultural assets. The map updates hourly. Something missing? <a href="https://app.localdata.com/mobile/#map-wakefields-cultural-assets-type-name-or-alias-below" target="_blank">Map your cultural asset</a>.</p>
-        </div>
+  <section id="first" class="main special" style="padding: 0; padding-top:inherit;">
+    <div class="spotlight">
+      <div class="content">
+        <header class="major">
+          <h2>Mapped Results</h2>
+        </header>
+        <p>Below is a map of surveyed cultural assets. The map updates hourly. Something missing? <a href="https://app.localdata.com/mobile/#map-wakefields-cultural-assets-type-name-or-alias-below" target="_blank">Map your cultural asset</a>.</p>
       </div>
-      <h2>Albion Cultural Assets</h2>
-<!--       <iframe width="100%" height="520" frameborder="0" src="https://mapc.carto.com/u/mapc-admin/builder/5e06ca82-9c79-11e6-bf23-0e3ebc282e83/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+    </div>
+    <h2>Albion Cultural Assets</h2>
+    <!--       <iframe width="100%" height="520" frameborder="0" src="https://mapc.carto.com/u/mapc-admin/builder/5e06ca82-9c79-11e6-bf23-0e3ebc282e83/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
  -->
-      <!-- <div id="dashboard" style="height: 520px; width:100%;"></div>     -->
-      <iframe width="99%" style="height: 90vh" frameborder="0" src="https://mapc.carto.com/u/mapc-admin/viz/54b45fea-aab5-11e6-9ee9-0e3ebc282e83/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-    </section>
-
+    <!-- <div id="dashboard" style="height: 520px; width:100%;"></div>     -->
+    <iframe width="99%" style="height: 90vh" frameborder="0" src="https://mapc.carto.com/u/mapc-admin/viz/54b45fea-aab5-11e6-9ee9-0e3ebc282e83/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+  </section>
   <!-- Second Section -->
-    <section id="second" class="main">
-      <div class="spotlight">
-        <div class="content">
-          <header class="major">
-            <h2>Albion Arts Corridor: Presentation of Final Report</h2>
-          </header>
-          <p>Join us for our final meeting on Thursday, June 22nd from 6-8 PM at the Beebe Library Lecture Hall. Plaza Jazz will be going on outside and there will be arts activities for kids as well as free food!</p>
-          <ul class="actions">
-          </ul>
-        </div>
-        <span class="image"><img src="images/2015-08-22_17.51.24.jpg" alt="" /></span>
+  <section id="second" class="main">
+    <div class="spotlight">
+      <div class="content">
+        <header class="major">
+          <h2>Albion Arts Corridor: Presentation of Final Report</h2>
+        </header>
+        <p>Join us for our final meeting on Thursday, June 22nd from 6-8 PM at the Beebe Library Lecture Hall. Plaza Jazz will be going on outside and there will be arts activities for kids as well as free food!</p>
+        <ul class="actions">
+          <li><a href="images/AlbionArtsLaunchFlyer.pdf">Flyer for Event</a></li>
+        </ul>
       </div>
-    </section>
-
+      <span class="image"><img src="images/2015-08-22_17.51.24.jpg" alt="" /></span>
+    </div>
+  </section>
   <!-- Get Started -->
-    <section id="cta" class="main">
-      <div class="spotlight">
-        <div class="content">
-          <header class="major">
-            <h2>More Opportunities to Engage</h2>
-
-            <p>For more information on the Albion Arts Corridor Economic Development Plan please contact Amanda Chisholm at <a href="mailto:achisholm@mapc.org">achisholm@mapc.org</a></p>
-          </header>
-        </div>
+  <section id="cta" class="main">
+    <div class="spotlight">
+      <div class="content">
+        <header class="major">
+          <h2>More Opportunities to Engage</h2>
+          <p>For more information on the Albion Arts Corridor Economic Development Plan please contact Amanda Chisholm at <a href="mailto:achisholm@mapc.org">achisholm@mapc.org</a></p>
+        </header>
       </div>
-    </section>
-
+    </div>
+  </section>
 </div>
