--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,11 +5,17 @@
     <div class="spotlight">
       <div class="content">
         <header class="major">
-          <h2>Thank You For Your Input</h2>
+          <h2>The Albion Arts Corridor Cultural Economic Development Plan is complete!</h2>
         </header>
-        <p>MAPC staff are working with the Town of Wakefield and the Albion Cultural Exchange Committee to put together a cultural economic development strategy for Downtown Wakefield focused on the Albion Arts Corridor. </p>
-        <p>Our goal is to develop a vision for the future of the cultural community in Downtown Wakefield and to create a community supported action plan with strategies to achieve that vision.</p>
-        <p>The action plan will be informed by a survey we conducted that received over 100 responses! Thank you to survey participants and others we have spoken with for helping us to inventory the cultural assets in Downtown Wakefield and to understand the community's vision for the Albion Arts Corridor.</p>
+        <p>The project engages arts and culture as part of a broader economic development strategy for downtown Wakefield. While a strong arts and culture sector can make Wakefield an even more exciting and enriching place to call home, it can also serve as a key drive of economic development that creates jobs, supports small businesses, and increases Town tax rolls. </p>
+        <p>The plan lays out short and long term action steps that can be taken by the Town and its partners to develop Albion Street (the Albion Arts Corridor) and the surrounding Downtown into a thriving arts and culture destination.</p>
+        <p>The report includes recommendations for achieving this vision that are structured around five major goals:</p>
+        </p>1. Creating a distinct arts and cultural identity for Downtown & the Albion Arts Corridor</p>
+        </p>2. Transforming Albion Street into an active street and focal point for arts and culture</p>
+        </p>3. Redeveloping the Albion Cultural Exchange Building into a permanent arts and culture center</p>
+        </p>4. Marketing arts and culture in the Downtown</p>
+        </p>5. Zoning and Redeveloping to support and grow a thriving arts and culture district Downtown</p>
+        </p>Click below to see the Executive Summary or the full report:
         </ul>
       </div>
       <span class="image"><img src="images/aceaufgust.jpg" alt="" /></span>
@@ -20,9 +26,9 @@
     <div class="spotlight">
       <div class="content">
         <header class="major">
-          <h2>Mapped Results</h2>
+          <h2>Cultural Assets Map</h2>
         </header>
-        <p>Below is a map of surveyed cultural assets. The map updates hourly. Something missing? <a href="https://app.localdata.com/mobile/#map-wakefields-cultural-assets-type-name-or-alias-below" target="_blank">Map your cultural asset</a>.</p>
+        <p>The Albion Arts Corridor project included an extensive community outreach process. As part of that process we asked the community to map cultural assets. See the mapped results below!</p>
       </div>
     </div>
     <h2>Albion Cultural Assets</h2>
@@ -31,20 +37,7 @@
     <!-- <div id="dashboard" style="height: 520px; width:100%;"></div>     -->
     <iframe width="99%" style="height: 90vh" frameborder="0" src="https://mapc.carto.com/u/mapc-admin/viz/54b45fea-aab5-11e6-9ee9-0e3ebc282e83/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
   </section>
-  <!-- Second Section -->
-  <section id="second" class="main">
-    <div class="spotlight">
-      <div class="content">
-        <header class="major">
-          <h2>Albion Arts Corridor: Presentation of Final Report</h2>
-        </header>
-        <p>Join us for our final meeting on Thursday, June 22nd from 6-8 PM at the Beebe Library Lecture Hall. Plaza Jazz will be going on outside and there will be arts activities for kids as well as free food!</p>
-        <ul class="actions">
-          <li><a href="images/AlbionArtsLaunchFlyer.pdf">Flyer for Event</a></li>
-        </ul>
-      </div>
-      <span class="image"><img src="images/2015-08-22_17.51.24.jpg" alt="" /></span>
-    </div>
+  
   </section>
   <!-- Get Started -->
   <section id="cta" class="main">
@@ -52,7 +45,7 @@
       <div class="content">
         <header class="major">
           <h2>More Opportunities to Engage</h2>
-          <p>For more information on the Albion Arts Corridor Economic Development Plan please contact Amanda Chisholm at <a href="mailto:achisholm@mapc.org">achisholm@mapc.org</a></p>
+          <p>For more information on the Albion Arts Corridor Cultural Economic Development Plan please contact Amanda Chisholm at <a href="mailto:achisholm@mapc.org">achisholm@mapc.org</a> or Chris Carino at ccarino@wakefield.ma.us<a href="mailto:ccarino@mapc.org">achisholm@mapc.org</a></p></p> 
         </header>
       </div>
     </div>
