--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -45,7 +45,7 @@
       <div class="content">
         <header class="major">
           <h2>More Opportunities to Engage</h2>
-          <p>For more information on the Albion Arts Corridor Cultural Economic Development Plan please contact Amanda Chisholm at <a href="mailto:achisholm@mapc.org">achisholm@mapc.org</a> or Chris Carino at ccarino@wakefield.ma.us<a href="mailto:ccarino@mapc.org">achisholm@mapc.org</a></p></p> 
+          <p>For more information on the Albion Arts Corridor Cultural Economic Development Plan please contact Amanda Chisholm at <a href="mailto:achisholm@mapc.org">achisholm@mapc.org</a> or Chris Carino at <a href="mailto:ccarino@wakefield.ma.us">ccarino@wakefield.ma.us</a></p> 
         </header>
       </div>
     </div>
