Replace rounded image for first content section

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -18,7 +18,7 @@
         </p>Click below to see the Executive Summary or the full report:
         </ul>
       </div>
-      <span class="image"><img src="images/aceaufgust.jpg" alt="" /></span>
+      <span class="image"><img src="images/New_Albion_Rendering-6-27-17.jpg" alt="" /></span>
     </div>
   </section>
   <!-- First Section -->
