Add PDF reports with download links

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -16,6 +16,10 @@
         </p>4. Marketing arts and culture in the Downtown</p>
         </p>5. Zoning and Redeveloping to support and grow a thriving arts and culture district Downtown</p>
         </p>Click below to see the Executive Summary or the full report:
+          <div class="pdf-links">
+            <a href="assets/Wakefield_Executive_Summary_June-29_v3.pdf" class="button" download>Executive Summary</a>
+            <a href="assets/Wakefield_Full_Report.pdf" class="button" download>Full Report</a>
+          </div>
         </ul>
       </div>
       <span class="image"><img src="images/New_Albion_Rendering-6-27-17.jpg" alt="" /></span>
