--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -13,6 +13,7 @@
     <link href="//cartodb-libs.global.ssl.fastly.net/cartodbui/assets/4.3.58/stylesheets/public_editor3.css" media="all" rel="stylesheet" type="text/css">
     <link href="//cartodb-libs.global.ssl.fastly.net/cartodbui/assets/4.3.58/stylesheets/deep_insights.css" media="all" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/custom.css" />
     <link rel="stylesheet" href="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15/themes/css/cartodb.css" />
 
 <!--     <%= stylesheet_link_tag :site %>
